# binpack

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  example-problem.yaml  release-plz.toml
.github/workflows/: build.yml  release-plz.yml
src/: dynamic-functional.rs  lib.rs  main.rs  simple-microlp.rs  simple.rs  types.rs
test_data/: 01_simple_one_item_one_bin.yaml  01_simple_one_workload.yaml  02_one_item_with_weight.yaml  02_one_workload_with_weight.yaml  03_two_items_one_weight.yaml  03_two_workloads_one_weight.yaml  04_three_items.yaml  04_three_workloads.yaml  05_simple_group_size.yaml  06_complex_group_size.yaml  07_complex_weight.yaml  08_complex_weight_with_group_size.yaml  09_large_numbers.yaml  10_large_search_space.yaml  11_opposing_objectives.yaml  12_tight_constraints.yaml
